feat: add api to get limits
